<resources>
    <string name="app_name">ShoeStore</string>
    <string name="email_address">Email</string>
    <string name="enter_email_address">Enter Email address or member ID</string>
    <string name="enter_password">Enter Password</string>
    <string name="log_in">Log in</string>
    <string name="forgot_question">Forgot your login details? </string>
    <string name="forgot_help">Get help logging in.</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_question">Don\'t have an account?</string>
    <string name="password">Password</string>
    <string name="app_icon_description">Application icon</string>
    <string name="welcome_shoe">Welcome Shoe!</string>
    <string name="welcome_massage">The easiest waty to sort your shoes inventor, edit and add!</string>
    <string name="shoe_shop_icon">Shoe shop icon</string>
    <string name="how_to_use">Click + And Add</string>
    <string name="instructions_massage">You can add shoes to your inventory by clicking + icon and enter shoe detail then save</string>
    <string name="next">Next</string>
    <string name="plus_icon">Plus Icon</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_button">Click button to add new show</string>
    <string name="log_out">Log Out</string>
    <string name="shoes_list">Shoes List</string>
    <string name="shoe_detail">Shoe Detail</string>
    <string name="shoe_name">Shoe Name:</string>
    <string name="shoe_company">Company:</string>
    <string name="shoe_size">Shoe Size:</string>
    <string name="shoe_description">Shoe Description:</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
    <string name="shoe_detail_s">Shoe Name: %1$s \n\nCompany: %2$s \n\nShoe Size: %3$.1f \n\nShoe Description: %4$s \n\n</string>
</resources>
