<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/welcom_shoe"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_layout_margin"
        android:text="@string/welcome_shoe"
        android:textSize="36sp"
        app:layout_constraintEnd_toEndOf="@+id/welcom_icon"
        app:layout_constraintStart_toStartOf="@+id/welcom_icon"
        app:layout_constraintTop_toBottomOf="@+id/welcom_icon" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/vertical_layout_margin"
        android:text="@string/welcome_massage"
        android:textAlignment="center"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="@+id/welcom_icon"
        app:layout_constraintStart_toStartOf="@+id/welcom_icon"
        app:layout_constraintTop_toBottomOf="@+id/welcom_shoe" />

    <ImageView
        android:id="@+id/welcom_icon"
        android:layout_width="0dp"
        android:layout_height="384dp"
        android:layout_marginStart="@dimen/horizontal_layout_margin"
        android:layout_marginTop="70dp"
        android:layout_marginEnd="@dimen/horizontal_layout_margin"
        android:contentDescription="@string/shoe_shop_icon"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_shoe_shop" />
</androidx.constraintlayout.widget.ConstraintLayout>