<?xml version="1.0" encoding="utf-8"?>

<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".screens.shoeDetail.ShoeDetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/shoe_detail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:fontFamily="@font/sevillana"
            android:text="@string/shoe_detail"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/shoe_size_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintEnd_toEndOf="@+id/shoe_company_field"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_field"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_label" />

        <EditText
            android:id="@+id/shoe_name_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:layout_marginEnd="@dimen/horizontal_layout_margin"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_label" />

        <TextView
            android:id="@+id/shoe_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:text="@string/shoe_company"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_name_field" />

        <EditText
            android:id="@+id/shoe_description_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/shoe_size_field"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_field"
            app:layout_constraintTop_toBottomOf="@+id/shoe_description_label" />

        <TextView
            android:id="@+id/shoe_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_layout_margin"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:text="@string/shoe_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/shoe_detail" />

        <EditText
            android:id="@+id/shoe_company_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:ems="10"
            android:inputType="textPersonName"
            app:layout_constraintEnd_toEndOf="@+id/shoe_name_field"
            app:layout_constraintStart_toStartOf="@+id/shoe_name_field"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_label" />

        <TextView
            android:id="@+id/shoe_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:text="@string/shoe_description"
            app:layout_constraintStart_toStartOf="@+id/shoe_size_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_size_field" />

        <TextView
            android:id="@+id/shoe_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:text="@string/shoe_size"
            app:layout_constraintStart_toStartOf="@+id/shoe_company_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_company_field" />

        <Button
            android:id="@+id/cancel_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/horizontal_layout_margin"
            android:layout_marginBottom="@dimen/vertical_layout_margin"
            android:text="@android:string/cancel"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/save_button"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/save_button"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/horizontal_layout_margin"
            android:layout_marginBottom="@dimen/vertical_layout_margin"
            android:text="@string/save"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/cancel_button" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>