<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable
            name="shoe"
            type="com.udacity.shoestore.models.Shoe" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/shoe_item_name_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_name"
            app:layout_constraintEnd_toStartOf="@+id/shoe_item_company_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_item_company_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_company"
            app:layout_constraintEnd_toStartOf="@+id/shoe_item_size_label"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_item_name_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_item_size_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shoe_size"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/shoe_item_company_label"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shoe_item_name_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:text="@={shoe.name}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_item_name_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_item_name_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_item_name_label" />

        <TextView
            android:id="@+id/shoe_item_company_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={shoe.company}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_item_company_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_item_company_label"
            app:layout_constraintTop_toTopOf="@+id/shoe_item_name_field" />

        <TextView
            android:id="@+id/shoe_item_size_field"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@={`` + shoe.size}"
            app:layout_constraintEnd_toEndOf="@+id/shoe_item_size_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_item_size_label"
            app:layout_constraintTop_toTopOf="@+id/shoe_item_company_field" />

        <TextView
            android:id="@+id/shoe_item_description_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:text="@string/shoe_description"
            app:layout_constraintStart_toStartOf="@+id/shoe_item_name_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_item_name_field" />

        <TextView
            android:id="@+id/shoe_item_description_field"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/vertical_layout_margin"
            android:layout_marginBottom="@dimen/vertical_layout_margin"
            android:text="@={shoe.description}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="@+id/shoe_item_size_label"
            app:layout_constraintStart_toStartOf="@+id/shoe_item_description_label"
            app:layout_constraintTop_toBottomOf="@+id/shoe_item_description_label" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>